plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.20'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.3.0'
    implementation 'com.google.code.gson:gson:2.10.1'

    //POINT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'        
	implementation 'org.locationtech.jts:jts-core:1.18.0'
	implementation 'org.hibernate.orm:hibernate-core:6.5.2.Final'
	implementation 'org.hibernate:hibernate-spatial:6.5.2.Final'
	implementation 'jakarta.servlet:jakarta.servlet-api'
  	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api'
  	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl'
  	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
  	
  	//JACKSON POINT
  	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'
  	
}

tasks.named('test') {
    useJUnitPlatform()
}
